--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -38,9 +38,9 @@
         "max-len": ["error", { "code": 120, "ignoreUrls": true, "ignoreStrings": true }],
         "@typescript-eslint/object-curly-spacing": "off",
         "@typescript-eslint/space-infix-ops": "off",
-        // "@typescript-eslint/no-explicit-any": "error",
+        "@typescript-eslint/no-explicit-any": "error",
         "@typescript-eslint/comma-dangle": "off",
-        // "@typescript-eslint/lines-between-class-members": ["error", "always", { "exceptAfterSingleLine": true }],
+        "@typescript-eslint/lines-between-class-members": ["error", "always", { "exceptAfterSingleLine": true }],
         "@typescript-eslint/no-useless-constructor": 0,
         "implicit-arrow-linebreak": "off",
         "operator-linebreak": ["error", "before"],
