h2 is ready and refactored

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,10 @@
         "plugin:@angular-eslint/recommended",
         "plugin:@angular-eslint/template/process-inline-templates"
       ],
+      "parser": "@typescript-eslint/parser",
+      "plugins": [
+        "@typescript-eslint"
+      ],
       "rules": {
         "@angular-eslint/directive-selector": [
           "error",
@@ -35,15 +39,31 @@
             "style": "kebab-case"
           }
         ],
-        "max-len": ["error", { "code": 120, "ignoreUrls": true, "ignoreStrings": true }],
+        "max-len": [
+          "error",
+          {
+            "code": 120,
+            "ignoreUrls": true,
+            "ignoreStrings": true
+          }
+        ],
         "@typescript-eslint/object-curly-spacing": "off",
         "@typescript-eslint/space-infix-ops": "off",
         "@typescript-eslint/no-explicit-any": "error",
         "@typescript-eslint/comma-dangle": "off",
-        "@typescript-eslint/lines-between-class-members": ["error", "always", { "exceptAfterSingleLine": true }],
+        "@typescript-eslint/lines-between-class-members": [
+          "error",
+          "always",
+          {
+            "exceptAfterSingleLine": true
+          }
+        ],
         "@typescript-eslint/no-useless-constructor": 0,
         "implicit-arrow-linebreak": "off",
-        "operator-linebreak": ["error", "before"],
+        "operator-linebreak": [
+          "error",
+          "before"
+        ],
         "linebreak-style": "off"
       }
     },
