--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "lodash": "^4.17.21",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "uuid": "^9.0.0",
+    "uuid4": "^2.0.3",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
@@ -34,6 +36,8 @@
     "@angular/cli": "~16.0.0",
     "@angular/compiler-cli": "^16.0.0",
     "@types/jasmine": "~4.3.0",
+    "@types/uuid": "^9.0.2",
+    "@types/uuid4": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "5.59.2",
     "@typescript-eslint/parser": "5.59.2",
     "eslint": "^8.40.0",
