--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@ngrx/effects": "^16.2.0",
+    "@ngrx/store": "^16.2.0",
+    "jasmine-marbles": "^0.9.2",
     "lodash": "^4.17.21",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -35,6 +38,7 @@
     "@angular-eslint/template-parser": "16.0.2",
     "@angular/cli": "~16.0.0",
     "@angular/compiler-cli": "^16.0.0",
+    "@ngrx/store-devtools": "^16.2.0",
     "@types/jasmine": "~4.3.0",
     "@types/uuid": "^9.0.2",
     "@types/uuid4": "^2.0.0",
